--- a/po/sr.po
+++ b/po/sr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-15 18:29+0100\n"
+"POT-Creation-Date: 2003-12-15 16:21+0100\n"
 "PO-Revision-Date: 2003-12-15 18:57+0100\n"
 "Last-Translator: Данило Шеган <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
@@ -1537,7 +1537,16 @@ msgid ""
 "mixed control signal can influence the amplification linearly (to amplify "
 "other control signals) or exponentially (to amplify audio signals). Finally, "
 "the master volume controls amplification of the resulting output signal."
-msgstr "BseAmplifier обезбеђује контролу појачања и наглашавања преко улазног сигнала. Подржава два контролна улаза и два звучна улаза који се мешају заједно према прилагођивању равнотеже и нивоа. Добитак контролише препојачање мешаног звучног сингала. Мешани контролни сигнал, уз тежински коефицијент, одређује појачање програма, дозвољавајући да спољашњи извори програма разделе општи промет (тремоло). Мешани контролни сигнал не може да утиче линеарно на појачивање (осталих контролних сигнала) или експоненцијално (за појачање звучних зигнала). Коначно, главна јачина управља појачање излазног сигнала."
+msgstr ""
+"BseAmplifier обезбеђује контролу појачања и наглашавања преко улазног "
+"сигнала. Подржава два контролна улаза и два звучна улаза који се мешају "
+"заједно према прилагођивању равнотеже и нивоа. Добитак контролише "
+"препојачање мешаног звучног сингала. Мешани контролни сигнал, уз тежински "
+"коефицијент, одређује појачање програма, дозвољавајући да спољашњи извори "
+"програма разделе општи промет (тремоло). Мешани контролни сигнал не може да "
+"утиче линеарно на појачивање (осталих контролних сигнала) или "
+"експоненцијално (за појачање звучних зигнала). Коначно, главна јачина "
+"управља појачање излазног сигнала."
 
 #: bse/bseamplifier.idl:46 plugins/bsebalance.idl:36
 msgid "Audio In1"
@@ -1922,7 +1931,12 @@ msgid ""
 "is controlled by a balance adjustment and the sum of the control inputs. To "
 "avoid aliasing artefacts for rapid balance changes, the control signal is "
 "preprocessed by a simple lowpass filter with adjustable cutoff frequency."
-msgstr "BseBalance је модуо за стерео равнање са два звучна и два контролна улаза, и на сваком се може одвојено прилагодити ниво. Излазна равнотежа се контролише равнотежом прилагођења и збиром контролних улаза. Ради избегавања шума за брзу измену равнотеже, контролни сигнал се предобрађује једноставним нископролазним филтером са прилагодљивом фреквенцијом одсецања."
+msgstr ""
+"BseBalance је модуо за стерео равнање са два звучна и два контролна улаза, и "
+"на сваком се може одвојено прилагодити ниво. Излазна равнотежа се контролише "
+"равнотежом прилагођења и збиром контролних улаза. Ради избегавања шума за "
+"брзу измену равнотеже, контролни сигнал се предобрађује једноставним "
+"нископролазним филтером са прилагодљивом фреквенцијом одсецања."
 
 #: plugins/bsebalance.idl:40
 msgid "Left Out"
@@ -2050,7 +2064,11 @@ msgid ""
 "language. The audio input signal is called input, the audio output signal is "
 "called output. Simple examples for programs would be \"output = input * 5\" "
 "or \"output = 2 * input + 1\"."
-msgstr "BseEvaluator је модуо који може да израчунава аритметичке операције у малом језику. Улаз звучног сингала се назива улаз, а излаз звучног сигнала се назива излаз. Једноставни примери за програме треба да буде „output = input * 5“ или „output = 2 * input +1“."
+msgstr ""
+"BseEvaluator је модуо који може да израчунава аритметичке операције у малом "
+"језику. Улаз звучног сингала се назива улаз, а излаз звучног сигнала се "
+"назива излаз. Једноставни примери за програме треба да буде „output = input "
+"* 5“ или „output = 2 * input +1“."
 
 #: plugins/evaluator/bseevaluator.idl:32
 msgid "Audio output"
