--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-15 18:29+0100\n"
+"POT-Creation-Date: 2003-12-15 16:21+0100\n"
 "PO-Revision-Date: 2003-12-15 18:57+0100\n"
 "Last-Translator: Danilo Šegan <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
@@ -779,9 +779,10 @@ msgid ""
 "similarly in future versions and be prepared to work around possible "
 "instabilities in the code (i.e. save your projects regularly)."
 msgstr ""
-"Uređivač polica je probni kod i sigurno će biti pokvaren do narednih izdanja. "
-"Znači, ne pouzdajte se da će izgled uređivača ostati isti u budućnosti, i "
-"budite spremni na nestabilnost u kodu (tj. redovno snimajte vaše projekte)."
+"Uređivač polica je probni kod i sigurno će biti pokvaren do narednih "
+"izdanja. Znači, ne pouzdajte se da će izgled uređivača ostati isti u "
+"budućnosti, i budite spremni na nestabilnost u kodu (tj. redovno snimajte "
+"vaše projekte)."
 
 #: beast-gtk/bstrackeditor.c:109 beast-gtk/bstrackview.c:43
 #: beast-gtk/dialogs/gadgets-beast.xml.h:22
@@ -1464,8 +1465,8 @@ msgid ""
 "If set, an underline in the text indicates the next character should be used "
 "for the mnemonic accelerator key"
 msgstr ""
-"Ukoliko je postavljeno, podvlaka u tekstu označava da sledeći znak predstavlja "
-"prečicu"
+"Ukoliko je postavljeno, podvlaka u tekstu označava da sledeći znak "
+"predstavlja prečicu"
 
 #: beast-gtk/gxk/gxksimplelabel.c:142
 msgid "Auto cut"
@@ -1475,8 +1476,8 @@ msgstr "Samo-iseci"
 msgid ""
 "If set, overfull text is cut-off and an ellipsis \"...\" is displayed instead"
 msgstr ""
-"Ukoliko je postavljeno, prepuni tekst se iseca i umesto njega se prikazuju tri "
-"tačke „...“"
+"Ukoliko je postavljeno, prepuni tekst se iseca i umesto njega se prikazuju "
+"tri tačke „...“"
 
 #: beast-gtk/gxk/gxksimplelabel.c:147
 msgid "Justification"
@@ -1537,7 +1538,16 @@ msgid ""
 "mixed control signal can influence the amplification linearly (to amplify "
 "other control signals) or exponentially (to amplify audio signals). Finally, "
 "the master volume controls amplification of the resulting output signal."
-msgstr "BseAmplifier obezbeđuje kontrolu pojačanja i naglašavanja preko ulaznog signala. Podržava dva kontrolna ulaza i dva zvučna ulaza koji se mešaju zajedno prema prilagođivanju ravnoteže i nivoa. Dobitak kontroliše prepojačanje mešanog zvučnog singala. Mešani kontrolni signal, uz težinski koeficijent, određuje pojačanje programa, dozvoljavajući da spoljašnji izvori programa razdele opšti promet (tremolo). Mešani kontrolni signal ne može da utiče linearno na pojačivanje (ostalih kontrolnih signala) ili eksponencijalno (za pojačanje zvučnih zignala). Konačno, glavna jačina upravlja pojačanje izlaznog signala."
+msgstr ""
+"BseAmplifier obezbeđuje kontrolu pojačanja i naglašavanja preko ulaznog "
+"signala. Podržava dva kontrolna ulaza i dva zvučna ulaza koji se mešaju "
+"zajedno prema prilagođivanju ravnoteže i nivoa. Dobitak kontroliše "
+"prepojačanje mešanog zvučnog singala. Mešani kontrolni signal, uz težinski "
+"koeficijent, određuje pojačanje programa, dozvoljavajući da spoljašnji "
+"izvori programa razdele opšti promet (tremolo). Mešani kontrolni signal ne "
+"može da utiče linearno na pojačivanje (ostalih kontrolnih signala) ili "
+"eksponencijalno (za pojačanje zvučnih zignala). Konačno, glavna jačina "
+"upravlja pojačanje izlaznog signala."
 
 #: bse/bseamplifier.idl:46 plugins/bsebalance.idl:36
 msgid "Audio In1"
@@ -1922,7 +1932,13 @@ msgid ""
 "is controlled by a balance adjustment and the sum of the control inputs. To "
 "avoid aliasing artefacts for rapid balance changes, the control signal is "
 "preprocessed by a simple lowpass filter with adjustable cutoff frequency."
-msgstr "BseBalance je moduo za stereo ravnanje sa dva zvučna i dva kontrolna ulaza, i na svakom se može odvojeno prilagoditi nivo. Izlazna ravnoteža se kontroliše ravnotežom prilagođenja i zbirom kontrolnih ulaza. Radi izbegavanja šuma za brzu izmenu ravnoteže, kontrolni signal se predobrađuje jednostavnim niskoprolaznim filterom sa prilagodljivom frekvencijom odsecanja."
+msgstr ""
+"BseBalance je moduo za stereo ravnanje sa dva zvučna i dva kontrolna ulaza, "
+"i na svakom se može odvojeno prilagoditi nivo. Izlazna ravnoteža se "
+"kontroliše ravnotežom prilagođenja i zbirom kontrolnih ulaza. Radi "
+"izbegavanja šuma za brzu izmenu ravnoteže, kontrolni signal se predobrađuje "
+"jednostavnim niskoprolaznim filterom sa prilagodljivom frekvencijom "
+"odsecanja."
 
 #: plugins/bsebalance.idl:40
 msgid "Left Out"
@@ -2050,7 +2066,11 @@ msgid ""
 "language. The audio input signal is called input, the audio output signal is "
 "called output. Simple examples for programs would be \"output = input * 5\" "
 "or \"output = 2 * input + 1\"."
-msgstr "BseEvaluator je moduo koji može da izračunava aritmetičke operacije u malom jeziku. Ulaz zvučnog singala se naziva ulaz, a izlaz zvučnog signala se naziva izlaz. Jednostavni primeri za programe treba da bude „output = input * 5“ ili „output = 2 * input +1“."
+msgstr ""
+"BseEvaluator je moduo koji može da izračunava aritmetičke operacije u malom "
+"jeziku. Ulaz zvučnog singala se naziva ulaz, a izlaz zvučnog signala se "
+"naziva izlaz. Jednostavni primeri za programe treba da bude „output = input "
+"* 5“ ili „output = 2 * input +1“."
 
 #: plugins/evaluator/bseevaluator.idl:32
 msgid "Audio output"
