--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Dec 15 23:21:56 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkparam.c (gxk_param_create_editor): prevent
+	value changes during editor widget creation.
+
 Mon Dec 15 18:51:05 2003  Tim Janik  <timj@gtk.org>
 
 	* configure.in: add note to translators about docs/site-development.texi.
