--- a/TODO
+++ b/TODO
@@ -1,19 +1,15 @@
 FIXMES:
+- destroy piano roll dialog if part is released
 - disable bseevaluator without --devel as it's unstable
 - remove hpack and vpack
-- make plugins/Makefile.am actually pick up *.idl files in distribution tarballs
 - remove bstrack*.[hc] cruft, old parasites and data pocket
 - allow parasite object links only within tree
-- s/sfi_value_rec_take_ref/sfi_value_take_rec/
-- s/sfi_value_seq_take_ref/sfi_value_take_seq/
 - queue action updates upon grouped action execution 
 - introduce gxk_action_group_select()-freeze/thaw to surround select/exec pair
 - auto-connect viewable-changed to gadget notebooks
 - add one-shot property to gxk-gadget-factories
 - make the plugin loader match on *.so and not *.la files
-- for menu factory branches, translate submenus *after* using the path as key
-- beast --devel misses "clear undo" in partdialog
-- extend module info dialog to cover author license etc.
+- remove blurb/authors/license fields from BseProcedure if possible
 - remove/rename test-string.bse
 - compressor gui: http://www.samsonwireless.net/store/product.asp?sku=EM.CLX-440&nav=m
 - migrate artscompressor threshold/output to dB (keep compat code)
