Added cs to ALL_LINGUAS.
2003-12-16  Miloslav Trmac  <mitr@volny.cz>

        * configure.in: Added cs to ALL_LINGUAS.

        * docs/site-development.texi: Added link to Czech translation status
        page.

svn path=/trunk/; revision=1672

--- a/docs/site-development.texi
+++ b/docs/site-development.texi
@@ -25,6 +25,7 @@ translations can be obtained from the following pages.
 @c status page links to all translations listed in ALL_LINGUAS:
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/az/extras/index.html,, az},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/ca/extras/index.html,, ca},
+@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/cs/extras/index.html,, cs},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/de/extras/index.html,, de},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/el/extras/index.html,, el},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/es/extras/index.html,, es},
