--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-16  Miloslav Trmac  <mitr@volny.cz>
+
+	* configure.in: Added cs to ALL_LINGUAS.
+
+	* docs/site-development.texi: Added link to Czech translation status
+	page.
+
 Tue Dec 16 12:00:55 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstcanvassource.c: show authors/license fields.
