--- a/TODO
+++ b/TODO
@@ -300,6 +300,7 @@ sfidl:
   - handle non-validated sequences and records in generation code (things
     can be demarshalled in non-validated form after incompatible changes)
   - sfidl-parser.cc: property keyword should be nuked
+  - sfidl-parser.cc: choices i18n
   - install sfidl
   extensions:
 30- choices need support for icons per value
