--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- bsedefs.h should define _() only for BSE_COMPILATION
 - apply editable and sensitive to params
 - destroy piano roll dialog if part is released
 - disable bseevaluator without --devel as it's unstable
