--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec 17 19:15:30 2003  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.c (g_option_find_value): fixed lookup bug.
+	continue string searches after wrong substring matches.
+
 Tue Dec 16 11:52:25 2003  Tim Janik  <timj@gtk.org>
 
 	* sfidl-module.cc: provide static accessors in generated Base objects
