--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec 17 19:19:08 2003  Tim Janik  <timj@gtk.org>
+
+	* davbassfilter.cc: CVS copy of davbassfilter.c.
+
 Mon Dec 15 22:56:22 2003  Tim Janik  <timj@gtk.org>
 
 	* bseadder.c:
