--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,12 @@
+Wed Dec 17 19:23:56 2003  Tim Janik  <timj@gtk.org>
+
+	* icons/davbassfilter.png: added DavBassFilter icon.
+
+	* davbassfilter.idl:
+	* davbassfilter.cc: ported DavBassFilter.
+	
+	* davbassfilter.[hc]: removed old DavBassFilter code.
+	
 Wed Dec 17 19:19:08 2003  Tim Janik  <timj@gtk.org>
 
 	* davbassfilter.cc: CVS copy of davbassfilter.c.
