show experimental router only for --devel. fixed MidiSynth GUI generation.
Wed Dec 17 19:12:57 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsupershell.c: show experimental router only for --devel.
        fixed MidiSynth GUI generation.

svn path=/trunk/; revision=1682

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 FIXMES:
+- category() method in plugins leaks across reloads
+- rename PARAM_DEFAULT TO STANDRAD
 - bsedefs.h should define _() only for BSE_COMPILATION
 - apply editable and sensitive to params
 - destroy piano roll dialog if part is released
