--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec 17 19:12:57 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsupershell.c: show experimental router only for --devel.
+	fixed MidiSynth GUI generation.
+
 2003-12-16  Miloslav Trmac  <mitr@volny.cz>
 
 	* configure.in: Added cs to ALL_LINGUAS.
