--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-18   Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Dutch translation updated by Tino Meinen.
+
 2003-12-18  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
