--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Dec 19 19:41:30 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkgadget.c (gxk_gadget_options_get): speed up
+	comparisons by turning all internally stored option names into quarks.
+
 Thu Dec 18 00:25:41 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstsnetrouter.c: removed hacks around degenerated
