--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,9 @@
+Sun Dec 21 20:19:31 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sfidl-parser.*: Support for #include-impl "foo.idl", which works
+	like #include, but also generates code for files which are
+	implincluded.
+
 Sun Dec 21 04:23:03 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-generator.cc sfidl-module.cc testidl.idl: Removed support for
