--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 21 20:40:15 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sfidl-cxx.cc: Use Bse::Sequence as sequence template for all
+	sequences (not only for the record based sequences).
+
 Sun Dec 21 20:19:31 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-parser.*: Support for #include-impl "foo.idl", which works
